--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       <li>Vagrant</li>
       <li>Docker</li>
       <li>Ansible</li>
-      <li>Integração Contínua</li>
+      <li>
+        Integração Contínua: Maturidade e produtividade no desenvolvimento de
+        Software
+      </li>
       <li>Ana</li>
     </ul>
   </body>
