--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <li>Ansible</li>
       <li>
         Integração Contínua: Maturidade e produtividade no desenvolvimento de
-        Software
+        Software.
       </li>
+      <li>teste</li>
       <li>Ana</li>
     </ul>
   </body>
