--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <ul>
-      <li>Vagrant</li>
-      <li>Docker: Criando container sem dor de cabeça</li>
+      <li>Vagrant: Gerenciando máquinas virtuais</li>
+      <li>Docker: Criando containers sem dor de cabeça</li>
       <li>Ansible</li>
       <li>
         Integração Contínua: Maturidade e produtividade no desenvolvimento de
         Software.
       </li>
+      <li>Kubernetes: Introdução a orquestração de containers</li>
       <li>teste</li>
       <li>Ana</li>
       <li>teste2</li>
