--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
       <dt>Kubernetes</dt>
       <dd>Introdução a orquestração de containers</dd>
     </dl>
+
+    <h2>Cursos de Cloud</h2>
+    <dl>
+      <dt>Deploy no Amazon EC2</dt>
+      <dd>Alta disponibilidade e escalabilidade de uma aplicação</dd>
+
+      <dt>Amazon S3</dt>
+      <dd>Manipule e armazene objetos na nuvem</dd>
+    </dl>
   </body>
 </html>
