--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </dl>
 
     <h2>Cursos de Cloud</h2>
-    <dl>
+    <>
       <dt>Deploy no Amazon EC2</dt>
       <dd>Alta disponibilidade e escalabilidade de uma aplicação</dd>
 
@@ -37,6 +37,9 @@
 
       <dt>Amazon ECS</dt>
       <dd>Gerencie Docker na nuvem da AWS</dd>
+
+      <dt>Google Cloud</dt>
+      <dd>Deploy de uma aplicação em Spring MVC</dd>
     </dl>
   </body>
 </html>
