--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lista de Cursos!!</title>
   </head>
   <body>
-    <h2>Cursos de DevOps</h2>
+    <h2>Cursos de DevOps:</h2>
     <dl>
       <dt>Vagrant</dt>
       <dd>Gerenciando máquinas virtuais</dd>
@@ -23,7 +23,7 @@
       <dd>Introdução a orquestração de containers</dd>
     </dl>
 
-    <h2>Cursos de Linux</h2>
+    <h2>Cursos de Linux:</h2>
     <dl>
       <dt>Linux I</dt>
       <dd>Conhecendo a orquestração de containers</dd>
@@ -38,7 +38,7 @@
       <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
     </dl>
 
-    <h2>Cursos de Cloud</h2>
+    <h2>Cursos de Cloud:</h2>
     <dl>
       <dt>Deploy no Amazon EC2</dt>
       <dd>Alta disponibilidade e escalabilidade de uma aplicação</dd>
